--- a/delpher.ipynb
+++ b/delpher.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9fc6e912",
+   "id": "c02e4061",
    "metadata": {},
    "source": [
     "**This notebook demonstrates how to perform Named Entity Recognition on article titles of historical Dutch newspapers (1840-1860), geocode the retrieved placenames, and subsequently plot them on a map**"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a33af554",
+   "id": "9a4d723d",
    "metadata": {},
    "source": [
     "Load the required libraries"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "65d2c015",
+   "id": "3af47fc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28e28cd0",
+   "id": "52a5489f",
    "metadata": {},
    "source": [
     "Load the dataset (currently locally stored)"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6b82c59f",
+   "id": "0333f247",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a25f380",
+   "id": "11d06707",
    "metadata": {},
    "source": [
     "Inspect the first row of data and the column names. You'll see that it's long because the content of the article is still included. We will not work with that now, since many article_titles already mention a placename. In a next step we could include article content, of course, and use the same workflow as below."
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0599dc35",
+   "id": "0e2323ea",
    "metadata": {
     "scrolled": true
    },
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "75539c39",
+   "id": "fbab0f65",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b031bfb8",
+   "id": "70e0ce19",
    "metadata": {},
    "source": [
     "Let's keep only the variables we want to continue to work with. And inspect the first rows of this subset. You'll already notice the mentioning of \"FRANKRIJK\" (France) and \"WEENEN\" (Vienna) here."
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "72c1042b",
+   "id": "0693c2a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4fc3ac0b",
+   "id": "46254843",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54feed80",
+   "id": "58bd541a",
    "metadata": {},
    "source": [
     "Not required for now, but below demonstrates how to extract years from the date variable."
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "675e1262",
+   "id": "6f0af36a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ec299885",
+   "id": "685e4dfc",
    "metadata": {},
    "outputs": [
     {
@@ -386,11 +386,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7cffdb3a",
+   "cell_type": "markdown",
+   "id": "e8975c42",
    "metadata": {},
-   "outputs": [],
    "source": [
     "For better Named Entity Recognition we will change the article_title variable to lower case strings. \n",
     "SpaCy has the tendency to recognize uppercase strings as corporations."
@@ -399,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e09a2c6b",
+   "id": "bd2c9427",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3376d2f",
+   "id": "8870ffca",
    "metadata": {},
    "source": [
     "Now we need to call in action the [Dutch language model](https://spacy.io/models/nl/#nl_core_news_sm) from spaCy to perform NER. If you want to replicate this analysis, you need to have this installed on your local machine. Read the website for installation instructions. "
@@ -417,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fe72265c",
+   "id": "cee55093",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcc576ea",
+   "id": "dc40678f",
    "metadata": {},
    "source": [
     "Below we parse the article_title to SpaCy and perform NER. You'll see that it has recognized at least some locations in the resulting table."
@@ -446,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "73a27dd0",
+   "id": "d5a9c0ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "719018af",
+   "id": "bd76302d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6e9ff848",
+   "id": "b5594514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "dbbcf3e0",
+   "id": "307b122d",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b806977",
+   "id": "9532b2cc",
    "metadata": {},
    "source": [
     "Before we can plot them on a map, we need to add coordinates to the placenames. We'll use the Google Maps API for that. Notice that you will need your own key to do so. You can register for a free API key at Google. "
@@ -547,29 +545,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "78063454",
+   "execution_count": 39,
+   "id": "b915c82b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in parse(text = x, srcfile = src): attempt to use zero-length variable name\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in parse(text = x, srcfile = src): attempt to use zero-length variable name\nTraceback:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "```{toggle}\n",
-    "register_google(key = \"AIzaSyCFS5l10yNClh7RnGURLdvBsCwGszHrmT4\")\n",
-    "```"
+    "register_google(key = \"AIzaSyCFS5l10yNClh7RnGURLdvBsCwGszHrmT4\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "91e83f08",
+   "id": "0b62fb2f",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "70e9283a",
+   "id": "bd1d4613",
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c20911c3",
+   "id": "2391babb",
    "metadata": {},
    "source": [
     "After the geocoding we merge the retrieved coordinates with the placenames."
@@ -845,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "23aa285b",
+   "id": "1ceb566a",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da0acd86",
+   "id": "59e9ea19",
    "metadata": {},
    "source": [
     "Now we'll need a map! You can use the standard Google Map and define a centre using latitute and longitude. However, for historical data I like to remove roads and names from the map. You can do that by making your own map at [Google Mapstyle](https://mapstyle.withgoogle.com/). With the same API key as you've use for the geocoding, you can export the URL of your map of choice, and paste it below in the function `get_googlemap`. For some reason, though, you first need to extract the lat and long from this URL, and the zoom level (see below). Then you paste the remaining URL from the first mention of '&maptype' behind `path =` (don't forget to include it in quotes). Then it should work!"
@@ -917,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e1088fcd",
+   "id": "1b003357",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46f82b70",
+   "id": "18c6feee",
    "metadata": {},
    "source": [
     "Now that we have our map loaded, we parse it to ggmap. Then we can add our data to it. The size of the dots corresponds to the number of times the geocoded placename is mentioned in our article titles. You'll see that Paris and France are dominant, but also that we spot some unexpected places in Italy and even Eastern Europe."
@@ -943,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "7549b109",
+   "id": "2d49bafb",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a950e04",
+   "id": "28eff8fa",
    "metadata": {},
    "source": [
     "That is all there is to it! For questions and comments email <r.schalk@uu.nl>"
@@ -1163,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a327f63",
+   "id": "de83fe2a",
    "metadata": {},
    "outputs": [],
    "source": []
