--- a/delpher.ipynb
+++ b/delpher.ipynb
@@ -18,10 +18,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "3af47fc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: raster\n",
+      "Loading required package: sp\n",
+      "\n",
+      "Attaching package: 'raster'\n",
+      "\n",
+      "The following object is masked from 'package:data.table':\n",
+      "\n",
+      "    shift\n",
+      "\n",
+      "Loading required package: lattice\n",
+      "Loading required package: latticeExtra\n",
+      "Loading required package: RColorBrewer\n",
+      "Warning message:\n",
+      "\"package 'ggmap' was built under R version 3.6.3\"Loading required package: ggplot2\n",
+      "Registered S3 methods overwritten by 'ggplot2':\n",
+      "  method         from \n",
+      "  [.quosures     rlang\n",
+      "  c.quosures     rlang\n",
+      "  print.quosures rlang\n",
+      "\n",
+      "Attaching package: 'ggplot2'\n",
+      "\n",
+      "The following object is masked from 'package:latticeExtra':\n",
+      "\n",
+      "    layer\n",
+      "\n",
+      "Google's Terms of Service: https://cloud.google.com/maps-platform/terms/.\n",
+      "Please cite ggmap if you use it! See citation(\"ggmap\") for details.\n"
+     ]
+    }
+   ],
    "source": [
     "library(data.table)\n",
     "library(spacyr)\n",
@@ -42,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0333f247",
    "metadata": {},
    "outputs": [],
@@ -201,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "0693c2a5",
    "metadata": {},
    "outputs": [],
@@ -211,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "46254843",
    "metadata": {},
    "outputs": [
@@ -396,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "bd2c9427",
    "metadata": {},
    "outputs": [],
@@ -414,8 +449,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "cee55093",
+   "execution_count": 12,
+   "id": "e78ae258",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "d5a9c0ad",
    "metadata": {},
    "outputs": [],
@@ -453,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "bd76302d",
    "metadata": {},
    "outputs": [],
@@ -463,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "b5594514",
    "metadata": {},
    "outputs": [],
@@ -474,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "307b122d",
    "metadata": {},
    "outputs": [
@@ -545,17 +580,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "b915c82b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "register_google(key = \"AIzaSyCFS5l10yNClh7RnGURLdvBsCwGszHrmT4\")"
+    "google_key <- fread(\"C:\\\\Users\\\\Schal107\\\\Documents\\\\UBU\\\\Team DH\\\\Delpher\\\\google_key.txt\")\n",
+    "register_google(key = paste0(google_key$key))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "0b62fb2f",
    "metadata": {},
    "outputs": [
@@ -831,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "1ceb566a",
    "metadata": {},
    "outputs": [
@@ -903,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "1b003357",
    "metadata": {},
    "outputs": [
@@ -929,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "2d49bafb",
    "metadata": {},
    "outputs": [
@@ -1146,14 +1182,6 @@
    "source": [
     "That is all there is to it! For questions and comments email <r.schalk@uu.nl>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de83fe2a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
