--- a/delpher.ipynb
+++ b/delpher.ipynb
@@ -5,7 +5,29 @@
    "id": "c02e4061",
    "metadata": {},
    "source": [
-    "**This notebook demonstrates how to perform Named Entity Recognition on article titles of historical Dutch newspapers (1840-1860), geocode the retrieved placenames, and subsequently plot them on a map**"
+    "<center><b><h2>  Where were revolutions located between 1840 and 1860, based on articles titles from Dutch newspapers?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81d3d410",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------------------------------------------------------------------------------\n",
+    "The dataset was constructed querying Delpher on the keyword 'revolutie' for the period 1840-1860. Since Delpher has no bulk download option, we've instead used [I-Analyzer](https://ianalyzer.hum.uu.nl) (developed by the [DH Lab at Utrecht University](https://dig.hum.uu.nl/)). This tool allows to query and download Delpher search results for this period."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd0f63f3",
+   "metadata": {},
+   "source": [
+    "To plot the locations mentioned in the article titles several steps are needed: Named Entity Recognition, extracting the locations, geocoding these, and obtaining a map to plot them. Here we've used (mainly) R for this, but Python would work as well. \n",
+    "\n",
+    "Apart from having R installed, you'll also need a python executable with [spaCy](https://spacy.io/usage) installed, and the corresponding [Dutch language model](https://spacy.io/models/nl#nl_core_news_sm). If you opt for a Google Map you'll also need a [Google API key for its Maps platform](https://developers.google.com/maps/faq). This is free as long as you don't exceed $200 in API calls a month (which usually does't happen).\n",
+    "\n",
+    "---------------------------------------------------------------------------------------------------------------------------"
    ]
   },
   {
@@ -13,7 +35,7 @@
    "id": "9a4d723d",
    "metadata": {},
    "source": [
-    "Load the required libraries"
+    "First we load the required libraries"
    ]
   },
   {
@@ -415,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bc7812b9",
+   "id": "934d4619",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "id": "0b62fb2f",
    "metadata": {},
    "outputs": [
@@ -955,18 +977,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c789b4b",
+   "id": "0dbce77b",
    "metadata": {},
    "source": [
-    "Click below to view the where revolutions were located between 1840 and 1860, based on articles titles from Dutch newspapers:"
+    "---------------------------------------------------------------------------------------------------------------------------\n",
+    "<center><b><h3>  And here we have our results:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "09ac1039",
+   "id": "dd692e27",
    "metadata": {},
    "source": [
-    "[delpher_map](delpher_map.png)"
+    "[<img src=\"delpher_map.png\" width=\"850\"/>](delpher_map.png)"
    ]
   },
   {
@@ -974,7 +997,7 @@
    "id": "28eff8fa",
    "metadata": {},
    "source": [
-    "That is all there is to it! For questions and comments email <r.schalk@uu.nl>"
+    "*For questions and comments email <r.schalk@uu.nl>"
    ]
   }
  ],
@@ -990,7 +1013,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "4.1.1"
   }
  },
  "nbformat": 4,
