--- a/delpher.ipynb
+++ b/delpher.ipynb
@@ -5,13 +5,13 @@
    "id": "c02e4061",
    "metadata": {},
    "source": [
-    "<center><b><h2>  Where were revolutions located between 1840 and 1860, based on articles titles from Dutch newspapers?\n",
+    "<center><b><h2>  Where were revolutions located between 1840 and 1860, based on articles titles from Dutch newspapers?<\\center><\\b>\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "81d3d410",
+   "id": "746f6522",
    "metadata": {},
    "source": [
     "---------------------------------------------------------------------------------------------------------------------------\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd0f63f3",
+   "id": "d217c233",
    "metadata": {},
    "source": [
     "To plot the locations mentioned in the article titles several steps are needed: Named Entity Recognition, extracting the locations, geocoding these, and obtaining a map to plot them. Here we've used (mainly) R for this, but Python would work as well. \n",
@@ -981,7 +981,7 @@
    "metadata": {},
    "source": [
     "---------------------------------------------------------------------------------------------------------------------------\n",
-    "<center><b><h3>  And here we have our results:"
+    "<center><b><h3>  And here we have our results:<\\center><\\b><\\h3>"
    ]
   },
   {
