--- a/delpher.ipynb
+++ b/delpher.ipynb
@@ -5,13 +5,13 @@
    "id": "c02e4061",
    "metadata": {},
    "source": [
-    "<center><b><h2>  Where were revolutions located between 1840 and 1860, based on articles titles from Dutch newspapers?<\\center><\\b>\n",
+    "<center><b><h2>  Where were revolutions located between 1840 and 1860, based on articles titles from Dutch newspapers?</center></b>\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "746f6522",
+   "id": "73bff079",
    "metadata": {},
    "source": [
     "---------------------------------------------------------------------------------------------------------------------------\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d217c233",
+   "id": "e138f360",
    "metadata": {},
    "source": [
     "To plot the locations mentioned in the article titles several steps are needed: Named Entity Recognition, extracting the locations, geocoding these, and obtaining a map to plot them. Here we've used (mainly) R for this, but Python would work as well. \n",
@@ -562,7 +562,7 @@
    "id": "9532b2cc",
    "metadata": {},
    "source": [
-    "Before we can plot them on a map, we need to add coordinates to the placenames. We'll use the Google Maps API for that. Notice that you will need your own key to do so. You can register for a free API key at Google. "
+    "Before we can plot them on a map, we need to add coordinates to the placenames. We'll use the Google Maps API for that. Notice that you will need your own key to do so. You can register for a free API key at Google. *(It seems impossible to hide the API call output, so just ignore that and scroll down.)*"
    ]
   },
   {
@@ -981,7 +981,7 @@
    "metadata": {},
    "source": [
     "---------------------------------------------------------------------------------------------------------------------------\n",
-    "<center><b><h3>  And here we have our results:<\\center><\\b><\\h3>"
+    "<center><b><h3>  And here we have our results:</center></h3>"
    ]
   },
   {
