--- a/delpher.ipynb
+++ b/delpher.ipynb
@@ -5,13 +5,13 @@
    "id": "c02e4061",
    "metadata": {},
    "source": [
-    "<center><b><h2>  Where were revolutions located between 1840 and 1860, based on articles titles from Dutch newspapers?</center></b>\n",
+    "<center><b><h2>  Where were revolutions located between 1840 and 1860, based on articles titles from Dutch newspapers?</b></center>\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "73bff079",
+   "id": "e48e136f",
    "metadata": {},
    "source": [
     "---------------------------------------------------------------------------------------------------------------------------\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e138f360",
+   "id": "0c844569",
    "metadata": {},
    "source": [
     "To plot the locations mentioned in the article titles several steps are needed: Named Entity Recognition, extracting the locations, geocoding these, and obtaining a map to plot them. Here we've used (mainly) R for this, but Python would work as well. \n",
@@ -981,7 +981,7 @@
    "metadata": {},
    "source": [
     "---------------------------------------------------------------------------------------------------------------------------\n",
-    "<center><b><h3>  And here we have our results:</center></h3>"
+    "<center><b><h3>  And here we have our results:</b></center>"
    ]
   },
   {
