--- a/delpher.ipynb
+++ b/delpher.ipynb
@@ -5,7 +5,7 @@
    "id": "c02e4061",
    "metadata": {},
    "source": [
-    "<center><b><h1>  Where were revolutions located between 1840 and 1860, based on articles titles from Dutch newspapers?</b></center>\n",
+    "<center><b><h1>  Where were revolutions located between 1840 and 1860, based on article titles from Dutch and English newspapers?</b></center>\n",
     "\n"
    ]
   },
@@ -15,7 +15,9 @@
    "metadata": {},
    "source": [
     "---------------------------------------------------------------------------------------------------------------------------\n",
-    "The dataset was constructed querying Delpher on the keyword 'revolutie' for the period 1840-1860, with OCR confidence between 80-100 per cent. Since Delpher has no bulk download option, we've instead used [I-Analyzer](https://ianalyzer.hum.uu.nl) (developed by the [DH Lab at Utrecht University](https://dig.hum.uu.nl/)). This tool allows to query and download Delpher search results for this period."
+    "The Dutch dataset was constructed querying Delpher on the keyword 'revolutie' for the period 1840-1860, with OCR confidence between 80-100 per cent. Since Delpher has no bulk download option, we've instead used [I-Analyzer](https://ianalyzer.hum.uu.nl) (developed by the [DH Lab at Utrecht University](https://dig.hum.uu.nl/)). This tool allows to query and download Delpher search results for this period.\n",
+    "\n",
+    "The same method has been used to fetch English articles from The Times, for the same period. Only addition is to exclude articles mentioning \"industrial\", since \"industrial revolution\" was also an often used term this period."
    ]
   },
   {
@@ -2217,15 +2219,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1915ad8e",
+   "id": "5aae58f0",
    "metadata": {},
    "source": [
-    "[<img src=\"all_map.png\" width=\"850\"/>](all_map.png)"
+    "[<img src=\"all_map.png\" width=\"1850\"/>](all_map.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "44d50596",
+   "id": "bd1b767d",
    "metadata": {},
    "source": [
     "*For questions and comments email <r.schalk@uu.nl>"
