--- a/delpher_august2022.Rmd
+++ b/delpher_august2022.Rmd
@@ -22,7 +22,6 @@ library(raster)
 library(ggmap)
 library(ggplot2)
 library(ggpubr)
-library(ggpubr)
 
 revol <- fread("C:\\Users\\Schal107\\Documents\\UBU\\Team DH\\Delpher\\dutchnewspapers-public_query=revolutie_date=1840-01-01 1860-12-31_ocr=80 100_sort=date,desc.csv")
 setDT(revol)
@@ -93,7 +92,7 @@ head(coordinates_delpher)
 
 <center><b><h1>  Now we'll do the same for articles from The Times</b></center>
 
-You can reconstruct the Times dataset using [this I-analyzer URL](https://ianalyzer.hum.uu.nl/search/times;query=revolution%20-%20industrial;$date=1840-01-01:1860-12-31;$ocr=80:100)
+You can reconstruct the Times dataset using [this I-analyzer URL](https://ianalyzer.hum.uu.nl/search/times;query=revolution%20-%20industrial;$date=1840-01-01:1860-12-31;$ocr=80:100).
 
 ```{r message=FALSE, warning=FALSE, echo=TRUE}
 times <- fread("C:\\Users\\Schal107\\Documents\\UBU\\Team DH\\Delpher\\times_query=revolution_-_industrial_date=1840-01-01 1860-12-31_ocr=80 100.csv")
@@ -116,7 +115,7 @@ coordinates_times <- cbind(times_locations, coordinates_times)
 head(coordinates_times)
 ```
 
-We now merge the two datasets. To identify the two datasets after merging, we add a 'dataset 'variable and rename "N".
+We now have two datasets with placenames and coordinates together with the number of times these places appeared in newspaper titles. Before plotting, we remove locations without coordinates.
 
 ```{r message=FALSE, warning=FALSE, echo=TRUE}
 coordinates_times[, dataset := "times",]
@@ -139,7 +138,6 @@ Now we'll need a map! You can use the standard Google Map and define a centre us
 europe5 <- get_googlemap(center=c(lon=10.95931966568949, lat=48.561877580811775), zoom = 4, path = "&maptype=roadmap&style=element:geometry%7Ccolor:0xf5f5f5&style=element:labels%7Cvisibility:off&style=element:labels.icon%7Cvisibility:off&style=element:labels.text.fill%7Ccolor:0x616161&style=element:labels.text.stroke%7Ccolor:0xf5f5f5&style=feature:administrative.land_parcel%7Cvisibility:off&style=feature:administrative.land_parcel%7Celement:labels.text.fill%7Ccolor:0xbdbdbd&style=feature:administrative.neighborhood%7Cvisibility:off&style=feature:landscape.natural.terrain%7Ccolor:0xffffff%7Cvisibility:on%7Cweight:4&style=feature:landscape.natural.terrain%7Celement:geometry.fill%7Cvisibility:on%7Cweight:4&style=feature:landscape.natural.terrain%7Celement:geometry.stroke%7Cvisibility:on&style=feature:poi%7Celement:geometry%7Ccolor:0xeeeeee&style=feature:poi%7Celement:labels.text.fill%7Ccolor:0x757575&style=feature:poi.park%7Celement:geometry%7Ccolor:0xe5e5e5&style=feature:poi.park%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&style=feature:road%7Cvisibility:off&style=feature:road%7Celement:geometry%7Ccolor:0xffffff&style=feature:road.arterial%7Celement:labels.text.fill%7Ccolor:0x757575&style=feature:road.highway%7Celement:geometry%7Ccolor:0xdadada&style=feature:road.highway%7Celement:labels.text.fill%7Ccolor:0x616161&style=feature:road.local%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&style=feature:transit.line%7Celement:geometry%7Ccolor:0xe5e5e5&style=feature:transit.station%7Celement:geometry%7Ccolor:0xeeeeee&style=feature:water%7Celement:geometry%7Ccolor:0xc9c9c9&style=feature:water%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&size=480x360")
 
 ```
-
 Now that we have our map loaded, we parse it to ggmap. Then we can add our data to it. The size of the dots corresponds to the number of times the geocoded placename is mentioned in our article titles. You'll see that Paris and France are dominant, but also that we spot some unexpected places in Italy and even Eastern Europe.
 
 ```{r message=FALSE, warning=FALSE, echo=TRUE}
@@ -157,11 +155,10 @@ invisible(ggarrange(times, delpher))
 ggsave("all_map.png")
 ```
 
-<center><b><h3>  And here we have our results:</b></center>
-
+<center><b><h3>  And here we have our results!</b></center>
 [<img src="all_map.png" width="850"/>](all_map.png)
 
 
-
+(The geocoded datasets are available at the [Github repository](https://github.com/RubenSchalk/textcorpora/tree/main/data).)
 
 
